# pytest-selenium-ci

./: MEMO.md  README.md  conftest.py  pyproject.toml  test_web01.py
.github/workflows/: test01.yaml
